# Lily

./: .gitignore  README.md
hw/: .gitignore
hw/LILY/: #auto_saved_files#  Klepeta.kicad_sch  LILY.kicad_prl  Motors.kicad_sch  _autosave-PowerSource.kicad_sch.kicad_sch
hw/main_board/: LILY.kicad_pro  LILY.kicad_sch  Lidar.kicad_sch  Logic.kicad_sch  PowerSource.kicad_sch.kicad_sch  ui.kicad_sch
sw/firmware/: .gitignore  CMakeLists.txt  sdkconfig
sw/firmware/game/: sdkconfig
sw/firmware/main/: CMakeLists.txt  idf_component.yml  main.cpp  mockRobot.h  robot.h  test.h
sw/logic/: .gitignore  bear_rescue.py  mk_lidar_raster.py  params.py  pursuit_test.py  remote_control.py  remote_control_sim.py  requirements.txt  serial_udp_bridge.py  setup.py  simulator_standalone.py  start.py
sw/logic/comm/: __init__.py  binary_serializer.py  controller.py  json_serializer.py  messages.py  recording_transport.py  replay_transport.py  serial_transport.py  types.py  udp_transport.py
sw/logic/control/: __init__.py  bear_approach.py  game.py  pure_pursuit.py
sw/logic/data/: map_bear_rescue.json
sw/logic/geometry/: __init__.py  raycast.py  shapes.py  transforms.py  util.py
sw/logic/localization/: __init__.py  _bear_detector_fast.pyx  bear_detector.py  particle_filter.py  stack.py  types.py
sw/logic/map/: __init__.py  loader.py  raster.py  types.py
sw/logic/notes/: algorithm_design.md  (+1 more)
sw/service/: README.md  bear-rescue.service  bear_rescue_service.py
sw/util/: cobs.h
sw/visualizer/: .gitignore  README.md
sw/visualizer/c++/tests/: CMakeLists.txt  cobs.cpp  util.h
(+96 files in other folders)
